classDiagram
    class TenderRequirement {
        +Optional~int~ id
        +int tender_id
        +str category
        +Optional~str~ requirement_nature
        +Optional~str~ title
        +Optional~str~ content
        +bool is_hard
        +Optional~str~ raw_text
        +Optional~int~ page_number
        +Optional~str~ numeric_value
        +Optional~str~ numeric_operator
        +Optional~str~ numeric_unit
        +str review_status
        +str created_at
    }

    class TechnicalResponse {
        +Optional~int~ id
        +int tender_id
        +int requirement_id
        +Optional~str~ spec_name
        +Optional~str~ required_value
        +Optional~str~ actual_value
        +bool is_hard
        +Optional~str~ remark
        +str created_at
        +str updated_at
    }

    class SubmissionChecklist {
        +Optional~int~ id
        +int tender_id
        +Optional~int~ requirement_id
        +str item_name
        +Optional~str~ description
        +str status
        +Optional~str~ remark
        +str created_at
        +str updated_at
    }

    class TenderRequirementUpdate {
        +Optional~str~ category
        +Optional~str~ requirement_nature
        +Optional~str~ title
        +Optional~str~ content
        +Optional~bool~ is_hard
        +Optional~str~ review_status
    }

    class TechnicalResponseUpdate {
        +Optional~str~ actual_value
        +Optional~str~ remark
    }

    class SubmissionChecklistUpdate {
        +Optional~str~ status
        +Optional~str~ remark
        +Optional~str~ item_name
        +Optional~str~ description
    }

    class TenderService {
        +async extract_requirements(tender_id) dict
        +async update_requirement(req_id, data) TenderRequirement
        +async reparse_requirements(tender_id) dict
        -_extract_one_chunk(text, page) list
    }

    class MatchService {
        +async match_tender(tender_id) dict
        -_should_match(req) bool
        +async get_match_results(tender_id) list
    }

    class TechnicalResponseService {
        +async init_from_requirements(tender_id) list
        +async get_all(tender_id) list
        +async update(id, data) TechnicalResponse
        +async batch_update(items) list
    }

    class SubmissionChecklistService {
        +async init_from_requirements(tender_id) list
        +async get_all(tender_id) list
        +async update(id, data) SubmissionChecklist
        +async add_manual_item(tender_id, data) SubmissionChecklist
    }

    TenderRequirement "1" --> "0..1" TechnicalResponse : requirement_id
    TenderRequirement "1" --> "0..1" SubmissionChecklist : requirement_id
    TenderService ..> TenderRequirement : manages
    MatchService ..> TenderRequirement : filters by nature
    TechnicalResponseService ..> TechnicalResponse : manages
    SubmissionChecklistService ..> SubmissionChecklist : manages
    TenderRequirementUpdate ..> TenderRequirement : updates
    TechnicalResponseUpdate ..> TechnicalResponse : updates
    SubmissionChecklistUpdate ..> SubmissionChecklist : updates
